text spacing fixed

--- a/src/Components/Banner/banner.scss
+++ b/src/Components/Banner/banner.scss
@@ -19,7 +19,7 @@
                 min-width: 70%;
                 color: white;
                 width: -webkit-fill-available;
-                text-align: justify;
+                text-align: left;
             }
             p{
                 font-size: 18px;
@@ -28,7 +28,7 @@
 
                 font-family: 'Poppins';
                 margin-top: 20px;
-                text-align: justify;
+                text-align: left;
             }
         }
         .banner-right{
