--- a/src/Components/MidSection/midsection.scss
+++ b/src/Components/MidSection/midsection.scss
@@ -27,7 +27,7 @@
             font-family: 'Poppins';
             color: white;
         
-            text-align: justify;
+            text-align: left;
         }
         p{
             font-size: 14px;
